// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Legend Snapshots No Children 1`] = `
<legend
  className="sc-bdfBwQ jPVsea"
/>
`;

exports[`Legend Snapshots No props 1`] = `
<legend
  className="sc-bdfBwQ jPVsea"
>
  This is a legend
</legend>
`;
